# wpipe

./: Cargo.toml  README.md
repo/: const_number.sh  const_number.sh.json  example.sh  example.sh.json  head.sh  head.sh.json
src/: fsrepo.rs  gui.rs  lib.rs  main.rs  node.rs  repo.rs
