[package]
name = "wpipe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1", features = ["full"]}
uuid = {version = "1", features = ["v4", "serde"]}
async-trait = "0.1"
jsonschema = "0.16"
serde_json = "1"
serde = {version = "1", features = ["derive"]}
nix = {version = "0.25", features = ["fs"]}
sha256 = "1"
egui = {version = "0.19", optional = true}
eframe = {version = "0.19", optional = true}
egui_node_graph = {version = "0.3", optional = true}
egui-notify = {version = "0.4", optional = true}

[features]
default = ["gui"]
gui = ["egui", "eframe", "egui_node_graph", "egui-notify"]